[package]
name = "sdf_2d"
version = "0.2.0"
authors = ["doup <asier@illarra.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Pixels & EGUI
egui = "0.10"
egui_wgpu_backend = { git = "https://github.com/hasenbanck/egui_wgpu_backend.git", rev = "9d03ad345d15d1e44165849b242d3562fdf3e859" }
egui_winit_platform = { git = "https://github.com/hasenbanck/egui_winit_platform.git", rev = "17298250e9721e8bf2c1d4a17b3e22777f8cb2e8" }
env_logger = "0.8"
log = "0.4"
pixels = { git = "https://github.com/parasyte/pixels.git", rev = "9bfed17a7f51733f9042b3b524405229c628003b" }
winit = "0.24"
winit_input_helper = "0.9"

# App Deps
bevy_math = "0.4.0"
rayon = "1.0"
png = "0.16.8"
