[package]
name = "sdf_2d"
version = "0.3.0"
authors = ["doup <asier@illarra.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Pixels & EGUI
egui = "0.19"
egui-wgpu = "0.19"
egui-winit = { version = "0.19", default-features = false, features = ["links"] }
env_logger = "0.9"
log = "0.4"
pixels = "0.10"
winit = "0.27"
winit_input_helper = "0.13"

# App Deps
bevy_math = "0.8.0"
rayon = "1.5"
png = "0.17"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
